templates/fhs-simple-2019/stylesheet.css
/* ... */
.nav_horizontal.open .menulevel4 li a,
.nav_horizontal.open .menulevel4 li span {
	padding-left: 4.5em;
}
.nav_horizontal.open .menulevel5 li a,
.nav_horizontal.open .menulevel5 li span {
	padding-left: 6.0em;
}
.nav_horizontal.open .menulevel6 li a,
.nav_horizontal.open .menulevel6 li span {
	padding-left: 7.5em;
}
.nav_horizontal.open .menulevel7 li a,
.nav_horizontal.open .menulevel7 li span {
	padding-left: 9.0em;
}
.nav_horizontal.open .menulevel8 li a,
.nav_horizontal.open .menulevel8 li span {
	padding-left: 10.5em;
}
.nav_horizontal.open .menulevel9 li a,
.nav_horizontal.open .menulevel9 li span {
	padding-left: 12.0em;
}
/* SecMenü */
.secmenu {
	margin: 3.75em 0;
	padding: 0 2em 0 1em;
}
.secmenu nav h2 {
	font-size: 1.133em;
	color: #fff;
	background: #f60;
	margin: 0;
	padding: .25em .5em;
	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
}
.secmenu nav h2:empty {
	display: none;
}
.secmenu ul.menulevel2 {
	padding: 0;
	margin: 0 0 2em 0;
	font-size: 0.9em;
	border: 1px solid #f60;
}
.secmenu ul li {
	list-style: none;
	display: block;
	padding: 0;
	margin: 0;
	border-top: 1px dotted #ccc;
}
.secmenu ul li:first-child,
.secmenu ul span:first-of-type {
	border-top: 0;
}
.secmenu ul span {
	padding: 0.5em;
	display: block;
	background: rgba(255,102,0,.1);
	color: #000;
}
.secmenu ul li a {
	text-decoration: none;
	padding: .5em;
	display: block;
	color: #333;
}
.secmenu li a:hover {
	color: #f60;
	background: rgba(0,0,0,.05);
}
.secmenu .menulevel3 li a,
.secmenu .menulevel3 span {
	padding-left: 1.5em;
}
.secmenu .menulevel4 li a,
.secmenu .menulevel4 span {
	padding-left: 2.5em;
}
.secmenu .menulevel5 li a,
.secmenu .menulevel5 span {
	padding-left: 3.5em;
}
.secmenu .menulevel6 li a,
.secmenu .menulevel6 span {
	padding-left: 4.5em;
}
.secmenu .menulevel7 li a,
.secmenu .menulevel7 span {
	padding-left: 5.5em;
}
.secmenu .menulevel8 li a,
.secmenu .menulevel8 span {
	padding-left: 6.5em;
}
.secmenu .menulevel9 li a,
.secmenu .menulevel9 span {
	padding-left: 7.5em;
}
/*** search ***/
#search1 {
	margin: .35em 0 1.5em 0;
}
#searchbox input[name="search"] {
	margin: 0;
	padding: .25em .5em !important;
	width: 75%;
	border-color: #f60;
	border-right: 0;
	float: left;
	color: #333;
}
#searchbox input[type="submit"] {
	margin: 0;
	padding: .25em .5em !important;
	width: 25%;
	border-color: #f60;
	background: #f60;
	color: #fff;
	text-shadow: 1px 1px 1px rgba(0,0,0,.6);
}
#searchbox input[type="submit"]:hover,
#searchbox input[type="submit"]:focus {
	border-color: #f60;
	background: #fff;
	color: #f30;
	text-shadow: none;
}
/*** sitemap ***/
ul.sitemaplevel1 {
	margin: 0;
	padding: 0;
	list-style: none;
}
ul.sitemaplevel1 li {
	list-style: none;
}
ul.sitemaplevel1 li a {
	text-transform: uppercase;
	color: #f60;
	display: block;
	padding: .25em;
	font-weight: 600;
}
ul.sitemaplevel1 li a:hover {
	background: #eee;
	border-color: transparent;
}
ul.sitemaplevel2 li a {
	font-weight: 400;
	text-transform: none;
	padding-left: 1.75em;
	color: #333;
}
ul.sitemaplevel3 li a {
	padding-left: 3.25em;
}
ul.sitemaplevel4 li a {
	padding-left: 4.5em;
}
ul.sitemaplevel5 li a {
	padding-left: 5.75em;
}
ul.sitemaplevel6 li a {
	padding-left: 7em;
}
ul.sitemaplevel7 li a {
	padding-left: 8.25em;
}
ul.sitemaplevel8 li a {
	padding-left: 9.75em;
}
ul.sitemaplevel9 li a {
	padding-left: 11em;
}
/* Layout */
body {
	height: 100%;
	background: #fff;
	color: #444;
	-webkit-font-smoothing: antialiased;
	font: 400 normal 15px/1.5em 'Open Sans', sans-serif;
}
.print {
	background: #fff !important;
	padding: 1em;
}
.print a {
	text-decoration: none;
	color: #666;
	border-bottom: 1px dotted #999;
}
#header {
	border-bottom: 5px solid #f60;
	background: #999;
}
#logo a {
	background: url(images/logo.png) no-repeat;
	height: 65px;
	width: 75px;
	display: inline-block;
	float: left;
	margin: .5em 0 0 1em;
	text-decoration: none;
}
#logoTxt a {
	color: #fff;
	float: left;
	margin: .5em 0 0;
	text-decoration: none;
	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
}
#logoTxt h1 {
	margin: 0;
}
#logoTxt h1 a {
	font-size: .9em;
}
.langMenu {
	position: absolute;
	z-index: 210;
	right: 2em;
	top: 1em;
}
.langMenu img {
	padding: 0;
}
.langMenu a {
	display: inline-block;
	padding: 0 0 .1em .1em;
}
.locator {
	font-size: 0.85em;
	padding: .75em 0;
	color: #666;
	background: rgba(0,0,0,.1);
}
.locator i.fa {
	color: #f60;
	font-size: 1.25em;
}
.locator a {
	color: #666;
	text-decoration: none;
	padding: .5em 0;
}
.locator a:hover,
.locator a:focus {
	color: #f60;
}
.locator span {
	padding: 0 1px;
}
.maincont {
	-webkit-hyphens: auto;
	-ms-hyphens: auto;
	hyphens: auto;
	padding: 3em 2em 3em 0;
	min-height: 90vh;
}
#topLink {
	z-index: 1000;
	display: none;
	position: fixed;
	right: 20px;
	bottom: 20px;
	background: rgba(255,255,255,.25);
	width: 40px;
	text-align: center;
}
a#topLink {
	color: rgba(0,0,0,.5);
}
/* Allgemeines */
code,
span.code {
	background-color: rgba(27, 31, 35, 0.05);
	margin: 0;
	padding: 0.15em;
	-webkit-hyphens: none;
	-ms-hyphens: none;
	hyphens: none;
	font: 0.9em/normal Consolas, monospace;
	letter-spacing: .05em;
}
p.code,
div.code {
	background-color: rgba(27, 31, 35, 0.05);
	color: #666;
	border: 1px solid #ccc;
	padding: 10px 12px;
	font: .9em/normal Consolas, monospace;
	display: block;
	-webkit-hyphens: none;
	-ms-hyphens: none;
	hyphens: none;
	clear: both;
	word-wrap: break-word;
}
.xh_code {
	background-color: rgba(27, 31, 35, 0.05);
	color: #666;
	border: 1px solid #ccc;
	padding: 10px 12px;
	font: .9em/normal Consolas, monospace;
	display: block;
	-webkit-hyphens: none;
	-ms-hyphens: none;
	hyphens: none;
}
blockquote {
	padding: .75em .75em .75em 3em;
	position: relative;
	color: #777;
	text-align: justify;
	border: 1px dotted #999;
	border-left: 0;
	border-right: 0;
	margin: 1.5em 0;
}
blockquote::before {
	color: #f60;
	content: "\f10e";
	display: block;
	font-family: "FontAwesome";
	font-size: 2em;
	left: 0;
	position: absolute;
}
blockquote p {
	margin: 0 !important;
}
/* ... */

